set(LIB_NAME "dom")

project("dom")
set(LAYOUT_ENGINE "Taitank")

get_filename_component(PROJECT_ROOT_DIR "${CMAKE_CURRENT_SOURCE_DIR}/.." REALPATH)
get_filename_component(CORE_DIR "${PROJECT_ROOT_DIR}/framework/js/core/" REALPATH)
get_filename_component(THIRD_DIR "${PROJECT_ROOT_DIR}/third_party/" REALPATH)

message("LAYOUT_ENGINE:" ${LAYOUT_ENGINE})
if (${LAYOUT_ENGINE} STREQUAL "Yoga")
  get_filename_component(LAYOUT_DIR "${THIRD_DIR}/yoga/include" REALPATH)
  message("ANDROID_ABI: ${ANDROID_ABI}")

  add_library(yoga STATIC IMPORTED)
  if(${ANDROID_ABI} STREQUAL "armeabi-v7a")
    set_property(TARGET yoga PROPERTY IMPORTED_LOCATION ${THIRD_DIR}/yoga/lib/android/armeabi-v7a/libyoga.a)
  elseif (${ANDROID_ABI} STREQUAL "arm64-v8a")
    set_property(TARGET yoga PROPERTY IMPORTED_LOCATION ${THIRD_DIR}/yoga/lib/android/arm64-v8a/libyoga.a)
  elseif (${ANDROID_ABI} STREQUAL "x86")
    set_property(TARGET yoga PROPERTY IMPORTED_LOCATION ${THIRD_DIR}/yoga/lib/andriod/x86/libyoga.a)
  elseif (${ANDROID_ABI} STREQUAL "x86_64")
    set_property(TARGET yoga PROPERTY IMPORTED_LOCATION ${THIRD_DIR}/yoga/lib/android/x86_64/libyoga.a)
  else()
    message(FATAL_ERROR "${ANDROID_ABI} is not supported")
  endif()
  set(DEPS yoga)
elseif (${LAYOUT_ENGINE} STREQUAL "Taitank")
  add_definitions("-DUSE_TAITANK")
  get_filename_component(LAYOUT_DIR "${PROJECT_ROOT_DIR}/layout" REALPATH)
  add_subdirectory(${LAYOUT_DIR} layout_out)
  set(DEPS layout)
else()
  message(FATAL_ERROR "Layout Engine ${LAYOUT_ENGINE} is not supported")
endif()

include_directories(${CORE_DIR}/include)
include_directories(${CORE_DIR}/third_party/base/include)
include_directories(${LAYOUT_DIR})
include_directories(${THIRD_DIR})
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include)
file(GLOB_RECURSE SRC_FILES ${CMAKE_CURRENT_SOURCE_DIR}/src/**.cc)
if (${LAYOUT_ENGINE} STREQUAL "Yoga")
  list(REMOVE_ITEM SRC_FILES ${CMAKE_CURRENT_SOURCE_DIR}/src/dom/taitank_layout_node.cc)
elseif(${LAYOUT_ENGINE} STREQUAL "Taitank")
  list(REMOVE_ITEM SRC_FILES ${CMAKE_CURRENT_SOURCE_DIR}/src/dom/yoga_layout_node.cc)
else()
  message(FATAL_ERROR "Layout Engine ${LAYOUT_ENGINE} is not supported")
endif()
message("SRC_FILES:${SRC_FILES}")

if (CMAKE_SYSTEM_NAME STREQUAL "Android")
  set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib/${ANDROID_ABI})
endif()

add_library(${LIB_NAME} STATIC ${SRC_FILES})
target_link_libraries(${LIB_NAME} ${DEPS})
set_property(TARGET ${LIB_NAME} PROPERTY CXX_STANDARD 17)
